--- a/css/index.css
+++ b/css/index.css
@@ -134,5 +134,54 @@ html,
 body {
   height: 100%;
   max-width: 100%;
-  background-color: ;
+  background-color: beige;
+  font-family: Palatino Linotype;
+  font-size: 62.5%;
+}
+header {
+  font-size: 1.5rem;
+}
+header nav {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 4%;
+}
+@media screen and (max-width: 500px) {
+  header nav {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
+header nav a {
+  padding: 0 1%;
+}
+.introImg {
+  width: 90%;
+  height: 35rem;
+  margin: 1% 5%;
+}
+header h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 3.5rem;
+}
+h2 {
+  display: flex;
+  justify-content: center;
+  padding-top: 0.4%;
+  font-size: 2rem;
+}
+.intro {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  margin: 1% 5%;
+  line-height: 1.5;
+}
+.middleContent {
+  font-size: 1.5rem;
+  display: flex;
+  margin: 1% 3%;
+  padding: 1% 1%;
 }
