--- a/less/index.less
+++ b/less/index.less
@@ -53,9 +53,112 @@ table {
     box-sizing: border-box;
 }
 
+// variables and mixins
+@backColor:beige;
+@fontFam1: Palatino Linotype;
+@fontSize:1.5rem;
+
+.mixinCenter() {
+	display:flex;
+	justify-content:center;
+
+}
+
+.mixinEvenly(){
+	display: flex;
+	justify-content:space-evenly;
+}
+
+.mixinEnd(){
+	display: flex;
+	justify-content: flex-end;
+}
+
+.mixinColumn(){
+	display:flex;
+	flex-direction: column;
+}
+
+
 html, body {
 	height: 100%;
 	max-width: 100%;
-	background-color:; 
+	background-color:@backColor;
+	font-family: @fontFam1; 
+	font-size:62.5%;
+	
 }
+
+header {
+
+
+	font-size:1.5rem ;
+
+	
+
+	nav {
+		.mixinEnd();
+		margin-right:4%;
+
+	@media screen and(max-width:500px){
+		.mixinCenter();
+		margin:0 auto;
+		
+	} //ends media query
+		a {
+			padding:0 1%
+
+	
+
+
+
+		} //anchor end
+		
+
+	} // nav end
+
+} //this closes header
+
+.introImg {
+	width:90%;
+	height:35rem;
+	margin:1% 5%
+}
+
+header h1 {
+	.mixinCenter();
+	font-size: 3.5rem;
+
+	
+
+}
+
+h2 {
+		.mixinCenter();
+		padding-top: .4%;
+		font-size: 2rem;
+	}
+
+
+	.intro{
+		.mixinCenter();
+		font-size: 1.5rem;
+		margin:1% 5%;
+		line-height: 1.5;
+
+	}//intro end
+
+
+	.middleContent {
+		font-size: @fontSize;
+		display: flex;
+		margin:1% 3%;
+		padding:1% 2%
+
+	p {
+		padding:1% 1%
+	}
+		
+		
+	} //middleContent
 
