--- a/css/index.css
+++ b/css/index.css
@@ -175,13 +175,24 @@ h2 {
 .intro {
   display: flex;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: 1% 5%;
   line-height: 1.5;
 }
 .middleContent {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   display: flex;
+  line-height: 2.5rem;
   margin: 1% 3%;
   padding: 1% 1%;
+}
+.middleContent .workAndSkills1 {
+  border: 0.1rem solid grey;
+  padding: 0 1%;
+  margin-right: 2%;
+}
+.middleContent .workAndSkills1 .workAndSkills2 {
+  border: 0.1rem solid grey;
+  padding: 0 1%;
+  margin-left: 2%;
 }
