--- a/less/index.less
+++ b/less/index.less
@@ -142,23 +142,37 @@ h2 {
 
 	.intro{
 		.mixinCenter();
-		font-size: 1.5rem;
+		font-size: 1.8rem;
 		margin:1% 5%;
 		line-height: 1.5;
 
-	}//intro end
+	}	//intro end
 
 
 	.middleContent {
-		font-size: @fontSize;
+		font-size: 1.8rem;
 		display: flex;
+		line-height:2.5rem;
+		
 		margin:1% 3%;
-		padding:1% 2%
+		padding:1% 1%;
 
-	p {
-		padding:1% 1%
-	}
-		
-		
-	} //middleContent
+	.workAndSkills1 {
+		// justify-content: space-evenly;
+		border: .1rem solid grey;
+		padding:0 1%;
+		margin-right:2%;
+
+		.workAndSkills2 {
+			border: .1rem solid grey;
+			padding:0 1%;
+			margin-left: 2%;
+
+		} //work skills2
+
+
+	} //wk skills1
+
+	
+	} //end middleContent
 
