--- a/css/index.css
+++ b/css/index.css
@@ -166,7 +166,8 @@ header h1 {
   justify-content: center;
   font-size: 3.5rem;
 }
-h2 {
+h2,
+h3 {
   display: flex;
   justify-content: center;
   padding-top: 0.4%;
@@ -183,16 +184,59 @@ h2 {
   font-size: 1.8rem;
   display: flex;
   line-height: 2.5rem;
-  margin: 1% 3%;
+  margin: 1% 3.5%;
   padding: 1% 1%;
+}
+@media screen and (max-width: 500px) {
+  .middleContent {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .middleContent .workAndSkills1 {
   border: 0.1rem solid grey;
-  padding: 0 1%;
-  margin-right: 2%;
+  padding: 1% 1%;
+  margin-right: 5%;
 }
-.middleContent .workAndSkills1 .workAndSkills2 {
+.middleContent .workAndSkills1 p {
+  padding-top: 2%;
+}
+.workAndSkills2 {
   border: 0.1rem solid grey;
+  margin-left: 5%;
+  padding: 1% 1%;
+}
+@media screen and (max-width: 500px) {
+  .workAndSkills2 {
+    margin: 1% 5% 0 0%;
+  }
+}
+.workAndSkills2 p {
+  padding-top: 2%;
+}
+.bottomImg {
+  width: 90%;
+  height: 20rem;
+  margin: 0 5%;
+}
+@media screen and (max-width: 500px) {
+  .bottomImg {
+    display: none;
+  }
+}
+.bottomContent {
+  margin-left: 5%;
+  font-size: 1.5rem;
+}
+.bottomContent h2 {
+  padding: 2% 0;
+  justify-content: flex-start;
+}
+footer {
+  font-size: 1.5rem;
+  margin-left: 4%;
+  padding-top: 3%;
+}
+footer a {
   padding: 0 1%;
-  margin-left: 2%;
 }
